src/bindings_linux_armv8.rs

#[doc = "  @noop FT_DEVICE_LIST_INFO_NODE\n @par Summary\n This structure is used for passing information about a device back from the FT_GetDeviceInfoList function.\n @see FT_GetDeviceInfoList"]
pub type FT_DEVICE_LIST_INFO_NODE = _ft_device_list_info_node;
unsafe extern "C" {
    #[doc = " @noop FT_GetDeviceInfoList\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function returns a device information list and the number of D2XX devices in the list.\n @param *pDest Pointer to an array of FT_DEVICE_LIST_INFO_NODE structures.\n @param lpdwNumDevs Pointer to the number of elements in the array.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function should only be called after calling FT_CreateDeviceInfoList. If the devices connected to the\n system change, the device info list will not be updated until FT_CreateDeviceInfoList is called again.\n Location ID information is not returned for devices that are open when FT_CreateDeviceInfoList is called.\n Information is not available for devices which are open in other processes. In this case, the Flags\n parameter of the FT_DEVICE_LIST_INFO_NODE will indicate that the device is open, but other fields will\n be unpopulated.\n @n The flag value is a 4-byte bit map containing miscellaneous data as defined Appendix A - Type\n Definitions. Bit 0 (least significant bit) of this number indicates if the port is open (1) or closed (0). Bit 1\n indicates if the device is enumerated as a high-speed USB device (2) or a full-speed USB device (0). The\n remaining bits (2 - 31) are reserved.\n @n The array of FT_DEVICE_LIST_INFO_NODES contains all available data on each device. The structure of\n FT_DEVICE_LIST_INFO_NODES is given in the Appendix. The storage for the list must be allocated by\n the application. The number of devices returned by FT_CreateDeviceInfoList can be used to do this.\n When programming in Visual Basic, LabVIEW or similar languages, FT_GetDeviceInfoDetail may be\n required instead of this function.\n @note Please note that Windows CE does not support location IDs. As such, the Location ID parameter in the\n structure will be empty.\n @see FT_CreateDeviceInfoList"]
    pub fn FT_GetDeviceInfoList(
        pDest: *mut FT_DEVICE_LIST_INFO_NODE,
        lpdwNumDevs: LPDWORD,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_GetDeviceInfoDetail\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function returns an entry from the device information list.\n @param dwIndex Index of the entry in the device info list.\n @param lpdwFlags Pointer to unsigned long to store the flag value.\n @param lpdwType Pointer to unsigned long to store device type.\n @param lpdwID Pointer to unsigned long to store device ID.\n @param lpdwLocId Pointer to unsigned long to store the device location ID.\n @param lpSerialNumber Pointer to buffer to store device serial number as a nullterminated string.\n @param lpDescription Pointer to buffer to store device description as a null-terminated string.\n @param *pftHandle Pointer to a variable of type FT_HANDLE where the handle will be stored.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function should only be called after calling FT_CreateDeviceInfoList. If the devices connected to the\n system change, the device info list will not be updated until FT_CreateDeviceInfoList is called again.\n @n The index value is zero-based.\n @n The flag value is a 4-byte bit map containing miscellaneous data as defined Appendix A - Type\n Definitions. Bit 0 (least significant bit) of this number indicates if the port is open (1) or closed (0). Bit 1\n indicates if the device is enumerated as a high-speed USB device (2) or a full-speed USB device (0). The\n remaining bits (2 - 31) are reserved.\n @n Location ID information is not returned for devices that are open when FT_CreateDeviceInfoList is called.\n Information is not available for devices which are open in other processes. In this case, the lpdwFlags\n parameter will indicate that the device is open, but other fields will be unpopulated.\n To return the whole device info list as an array of FT_DEVICE_LIST_INFO_NODE structures, use\n FT_CreateDeviceInfoList.\n @note Please note that Windows CE does not support location IDs. As such, the Location ID parameter in the\n structure will be empty.\n @see FT_CreateDeviceInfoList"]
    pub fn FT_GetDeviceInfoDetail(
        dwIndex: DWORD,
        lpdwFlags: LPDWORD,
        lpdwType: LPDWORD,
        lpdwID: LPDWORD,
        lpdwLocId: LPDWORD,
        lpSerialNumber: LPVOID,
        lpDescription: LPVOID,
        pftHandle: *mut FT_HANDLE,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_ListDevices\n @par Summary\n Gets information concerning the devices currently connected. This function can return information such\n as the number of devices connected, the device serial number and device description strings, and the\n location IDs of connected devices.\n @param pvArg1 Meaning depends on dwFlags.\n @param pvArg2 Meaning depends on dwFlags.\n @param dwFlags Determines format of returned information.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function can be used in a number of ways to return different types of information. A more powerful\n way to get device information is to use the FT_CreateDeviceInfoList, FT_GetDeviceInfoList and\n FT_GetDeviceInfoDetail functions as they return all the available information on devices.\n In its simplest form, it can be used to return the number of devices currently connected. If\n FT_LIST_NUMBER_ONLY bit is set in dwFlags, the parameter pvArg1 is interpreted as a pointer to a\n DWORD location to store the number of devices currently connected.\n @n It can be used to return device information: if FT_OPEN_BY_SERIAL_NUMBER bit is set in dwFlags, the\n serial number string will be returned; if FT_OPEN_BY_DESCRIPTION bit is set in dwFlags, the product\n description string will be returned; if FT_OPEN_BY_LOCATION bit is set in dwFlags, the Location ID will\n be returned; if none of these bits is set, the serial number string will be returned by default.\n @n It can be used to return device string information for a single device. If FT_LIST_BY_INDEX and\n FT_OPEN_BY_SERIAL_NUMBER or FT_OPEN_BY_DESCRIPTION bits are set in dwFlags, the parameter\n pvArg1 is interpreted as the index of the device, and the parameter pvArg2 is interpreted as a pointer to\n a buffer to contain the appropriate string. Indexes are zero-based, and the error code\n FT_DEVICE_NOT_FOUND is returned for an invalid index.\n @n It can be used to return device string information for all connected devices. If FT_LIST_ALL and\n FT_OPEN_BY_SERIAL_NUMBER or FT_OPEN_BY_DESCRIPTION bits are set in dwFlags, the parameter\n pvArg1 is interpreted as a pointer to an array of pointers to buffers to contain the appropriate strings and\n the parameter pvArg2 is interpreted as a pointer to a DWORD location to store the number of devices\n currently connected. Note that, for pvArg1, the last entry in the array of pointers to buffers should be a\n NULL pointer so the array will contain one more location than the number of devices connected.\n @n The location ID of a device is returned if FT_LIST_BY_INDEX and FT_OPEN_BY_LOCATION bits are set in\n dwFlags. In this case the parameter pvArg1 is interpreted as the index of the device, and the parameter\n pvArg2 is interpreted as a pointer to a variable of type long to contain the location ID. Indexes are\n zerobased, and the error code FT_DEVICE_NOT_FOUND is returned for an invalid index. Please note that\n Windows CE and Linux do not support location IDs.\n @n The location IDs of all connected devices are returned if FT_LIST_ALL and FT_OPEN_BY_LOCATION bits\n are set in dwFlags. In this case, the parameter pvArg1 is interpreted as a pointer to an array of variables\n of type long to contain the location IDs, and the parameter pvArg2 is interpreted as a pointer to a\n DWORD location to store the number of devices currently connected.\n @see FT_CreateDeviceInfoList\n @see FT_GetDeviceInfoList\n @see FT_GetDeviceInfoDetail"]
    pub fn FT_ListDevices(pvArg1: PVOID, pvArg2: PVOID, dwFlags: DWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_Open\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Open the device and return a handle which will be used for subsequent accesses.\n @param deviceNumber Index of the device to open. Indices are 0 based.\n @param pHandle Pointer to a variable of type FT_HANDLE where the handle will be stored. This handle must\n be used to access the device.\n @return\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n Although this function can be used to open multiple devices by setting iDevice to 0, 1, 2 etc. there is no\n ability to open a specific device. To open named devices, use the function FT_OpenEx.\n @see FT_OpenEx."]
    pub fn FT_Open(deviceNumber: ::std::os::raw::c_int, pHandle: *mut FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_OpenEx\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Open the specified device and return a handle that will be used for subsequent accesses. The device can\n be specified by its serial number, device description or location.\n @n This function can also be used to open multiple devices simultaneously. Multiple devices can be specified\n by serial number, device description or location ID (location information derived from the physical\n location of a device on USB). Location IDs for specific USB ports can be obtained using the utility\n USBView and are given in hexadecimal format. Location IDs for devices connected to a system can be\n obtained by calling FT_GetDeviceInfoList or FT_ListDevices with the appropriate flags.\n @param pvArg1 Pointer to an argument whose type depends on the value of dwFlags.\n It is normally be interpreted as a pointer to a null terminated string.\n @param dwFlags FT_OPEN_BY_SERIAL_NUMBER, FT_OPEN_BY_DESCRIPTION or FT_OPEN_BY_LOCATION.\n @param pHandle Pointer to a variable of type FT_HANDLE where the handle will be\n stored. This handle must be used to access the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n The parameter specified in pvArg1 depends on dwFlags: if dwFlags is FT_OPEN_BY_SERIAL_NUMBER,\n pvArg1 is interpreted as a pointer to a null-terminated string that represents the serial number of the\n device; if dwFlags is FT_OPEN_BY_DESCRIPTION, pvArg1 is interpreted as a pointer to a nullterminated\n string that represents the device description; if dwFlags is FT_OPEN_BY_LOCATION, pvArg1\n is interpreted as a long value that contains the location ID of the device. Please note that Windows CE\n and Linux do not support location IDs.\n @n ftHandle is a pointer to a variable of type FT_HANDLE where the handle is to be stored. This handle must\n be used to access the device."]
    pub fn FT_OpenEx(pvArg1: PVOID, dwFlags: DWORD, pHandle: *mut FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_Close\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Close an open device.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_Close(ftHandle: FT_HANDLE) -> FT_STATUS;
}
